--- a/.babelrc
+++ b/.babelrc
@@ -8,6 +8,9 @@
       "presets": [
         "latest",
         "react-hmre"
+      ],
+      "plugins": [
+        "transform-class-properties"
       ]
     },
     "production": {
@@ -30,4 +33,3 @@
     }
   }
 }
-
