--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "babel-eslint": "7.1.1",
     "babel-jest": "18.0.0",
     "babel-loader": "6.2.10",
+    "babel-plugin-transform-class-properties": "6.23.0",
     "babel-plugin-transform-react-constant-elements": "6.9.1",
     "babel-plugin-transform-react-remove-prop-types": "0.2.11",
     "babel-polyfill": "6.20.0",
@@ -74,6 +75,10 @@
     "node-sass": "4.0.0",
     "npm-run-all": "3.1.2",
     "open": "0.0.5",
+    "postcss": "5.2.15",
+    "postcss-cssnext": "2.9.0",
+    "postcss-flexbugs-fixes": "2.1.0",
+    "postcss-import": "9.1.0",
     "postcss-loader": "1.2.1",
     "prompt": "1.0.0",
     "react-addons-test-utils": "15.4.1",
